feat: quote page (#2954)
